[gd_scene load_steps=12 format=3 uid="uid://d0kdyhy5e1l70"]

[ext_resource type="Theme" uid="uid://crvtv2tqtcxqd" path="res://Scenes/ui/game_ui_theme.tres" id="1_uol4x"]
[ext_resource type="Texture2D" uid="uid://chgrumgcwmdck" path="res://Assets/game/objects/basic_tools_and_materials.png" id="2_fdmyq"]
[ext_resource type="Script" uid="uid://cfy7xhcc34i31" path="res://Scenes/ui/inventory_panel.gd" id="2_q5w17"]
[ext_resource type="Texture2D" uid="uid://bakpcvstfo5da" path="res://Assets/game/objects/basic_plants.png" id="3_at4ca"]
[ext_resource type="Texture2D" uid="uid://cv3ltlsoug8bx" path="res://Assets/game/objects/egg_item.png" id="4_fss42"]
[ext_resource type="Texture2D" uid="uid://dlwucdggiatf6" path="res://Assets/game/objects/simple_milk_and_grass_item.png" id="5_a0qge"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3068x"]
atlas = ExtResource("2_fdmyq")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1olkl"]
atlas = ExtResource("2_fdmyq")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uc0f"]
atlas = ExtResource("3_at4ca")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8jbq"]
atlas = ExtResource("3_at4ca")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_en1w4"]
atlas = ExtResource("5_a0qge")
region = Rect2(32, 0, 16, 16)

[node name="InventoryPanel" type="PanelContainer"]
offset_left = 1.0
offset_top = 1.0
offset_right = 41.0
offset_bottom = 41.0
theme = ExtResource("1_uol4x")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_q5w17")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Wood" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Wood"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_3068x")

[node name="WoodLabel" type="Label" parent="MarginContainer/VBoxContainer/Wood"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Stone" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Stone"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_1olkl")

[node name="StoneLabel" type="Label" parent="MarginContainer/VBoxContainer/Stone"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Wheat" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Wheat"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_1uc0f")

[node name="WheatLabel" type="Label" parent="MarginContainer/VBoxContainer/Wheat"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Tomato" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Tomato"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_e8jbq")

[node name="TomatoLabel" type="Label" parent="MarginContainer/VBoxContainer/Tomato"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Egg" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Egg"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("4_fss42")

[node name="EggLabel" type="Label" parent="MarginContainer/VBoxContainer/Egg"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Milk" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Milk"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_en1w4")

[node name="MilkLabel" type="Label" parent="MarginContainer/VBoxContainer/Milk"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"
